--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -29,7 +29,7 @@
   <base href="/">
 
   <body id='body'>
-    <app-aou>Loading AppComponent content here ...</app-aou>
+    <app-aou>Loading All of Us Research Workbench</app-aou>
     <app-bug-report></app-bug-report>
     <app-error-handler></app-error-handler>
   </body>
