--- a/public-ui/src/index.html
+++ b/public-ui/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>All of Us Researcher Portal Prototype</title>
+    <title>AOU Data Browser Prototype</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
