progess on surveys page

--- a/public-ui/src/index.html
+++ b/public-ui/src/index.html
@@ -25,7 +25,7 @@
   <!-- Push state routing -->
   <base href="/">
 
-  <body id='body'>
+  <body id='dbbody' >
     <app-public-aou></app-public-aou>
   </body>
 </html>
