answers listed in prog

--- a/public-ui/src/index.html
+++ b/public-ui/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AOU Data Browser Prototype</title>
     <base href="/">
+    <title>AOU Data Browser Prototype</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -23,7 +23,7 @@
   </head>
 
   <!-- Push state routing -->
-  <base href="/">
+  <!--<base href="/"> -->
 
   <body id='dbbody' >
     <app-public-aou></app-public-aou>
