[RW-1113][Risk=no] Fix font for sign in button

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -24,6 +24,7 @@
       gtag('config', ga_tracking_id);
     </script>
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7761236/6749992/css/fonts.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 
   <!-- Push state routing -->
